--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,6 +138,6 @@ console.log(txtdata)
 } 
  
  </script>
- <script src="./form.cjs"></script>
+ <script src="./form.js"></script>
 	</body>
 </html>
