--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,9 +81,9 @@
           <button>Process file</button>
         </div>
     </div> 
-
+ <!--<script is:inline src="https://unpkg.com/compromise@14.10.0"></script>
 	<script type="text/javascript">
-/*
+
 
 var txtdata = "";
 const btn = document.querySelector('button');
@@ -102,6 +102,7 @@ function readfile(file){
     const read = new FileReader();
     console.log(read)
     read.onload = function result(ev){
+      var txtdata = "";
         //console.log(ev);
         //let output = document.createElement('div');
         //output.setAttribute('class', "output");
@@ -113,31 +114,57 @@ function readfile(file){
         const xml = parser.parseFromString(text, "text/xml");
         const select = xml.querySelectorAll('div2:not(div2[type="forematter"]) *');
         const select1 = xml.querySelectorAll('div2 *');
+        const select2 = xml.querySelectorAll('body *');
         
-        for (var n of select1){
-            var txtcont = n.textContent.toString();
+        for (var n of select2){
+            var txtcont = n.textContent.toString()
             
-            txtdata += txtcont + " ";
-           
+            txtdata += txtcont + " "; 
         }
-   
-console.log(txtdata)
+      
+var doc = nlp(txtdata);
+const people =[];
+const places = [];
+const orgs =[];
+const ents = {};
+for (var person in doc.people().json()){
+  if (people.indexOf(doc.people().json()[person].text)==-1){
+  people.push(doc.people().json()[person].text)
+}}
+for (var place in doc.places().json()){
+  if (places.indexOf(doc.places().json()[place].text)==-1){
+  places.push(doc.places().json()[place].text)
+    }}
+for (var org in doc.organizations().json()){
+  if (orgs.indexOf(doc.organizations().json()[org].text)==-1){
+  orgs.push(doc.organizations().json()[org].text)
+}}
+//ents.person = people;
+//ents.place = places;
+//ents.org = orgs;
+var txt = text;
+for(var pers in people){
+ txt = txt.replaceAll(people[pers], `<persName>${people[pers]}</persName/>`)};
+for(var pl in places){txt = txt.replaceAll(places[pl], `<placeName>${places[pl]}</placeName/>`)};
+for(var org in orgs){txt = txt.replaceAll(orgs[org], `<orgName>${orgs[org]}</orgName/>`)};
+
 
 // based on: https://www.tutorialspoint.com/how-to-create-and-save-text-file-in-javascript
-      /*  const a = document.createElement('a');
-        const outfile = new Blob([text], { type: 'text/xml' });
+      const a = document.createElement('a');
+        const outfile = new Blob([txt], { type: 'text/xml' });
         //console.log(outfile);
         a.href = URL.createObjectURL(outfile);
         a.download = `ner_${file.files[0].name}`;
         a.click();
         URL.revokeObjectURL(a.href);
-        */
-  /*
+        
+  
     };
-    read.readAsText(file.files[0])
+    read.readAsText(file.files[0]) 
 } 
- */
- </script>
+ 
+ </script> -->
  <script src="./form.cjs"></script>
+
 	</body>
 </html>
