--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@
         font-size: medium;
         margin-right:.5rem;
        }
-
+       p {color:rgb(244, 244, 250);}
        button{
         font-size: 1rem;
         margin: 2rem;
@@ -71,8 +71,12 @@
 	</head>
 	<body>
 		<h1>Named Entity TEI tagger</h1>
+    <p>This is a simple web app for named entity recognition (NER) and tagging for TEI. It uses the <a href="https://github.com/spencermountain/compromise">Compromise.js</a> library for NLP (Natural Language Processing) in JavaScript. It provides recognition for basic entities such as Persons, Places and Organizations. Compromise.js is trained on a set of modern languages, so the app is able to recognize entities in several languages.</p>
+
+<p>This NER app is very simple to use. Just upload your XML document and click on the process button and find your output file in your downloads set folder.</p>
+
+<p><strong><em>Note: </em></strong> <em>The app does a simple pre-tagging, merely to identify as many entities as the models allow in order to facilitate the NER encoding process (only the tag is included without attributes, ex: &lt;persName&gt;William&lt;/persName&gt;, and there may be tagging mistakes if the entity is not accurately recognized). Therefore, a cleaning process is necessary afterwards.</em></p>
     <div class="container">
-    <!-- <form action="handlefile.js" method="post" enctype="multipart/form-data">-->
         <div>
           <label for="file">Upload your XML-TEI file</label>
           <input id="file" name="file" type="file" accept="text/xml"/>
