corrected spelling mistake

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,7 +75,7 @@
 
     <p>Compromise.js is trained on a set of modern languages, so the app is able to recognize entities in several languages.</p>
 
-<p>This NER app is very simple to use. Just upload your XML document (ckeck the box if you need the date tags) and click on the process button to find your output file in your downloads set folder.</p>
+<p>This NER app is very simple to use. Just upload your XML document (check the box if you need the date tags) and click on the process button to find your output file in your downloads set folder.</p>
 
 <p><strong><em>Note: </em></strong> <em>The app does a simple pre-tagging, merely to identify as many entities as the models allow in order to facilitate the NER encoding process (only the tag is included without attributes, ex: &lt;persName&gt;William&lt;/persName&gt;, and there may be tagging mistakes if the entity is not accurately recognized). Therefore, a cleaning process is necessary afterwards.</em></p>
     <div class="container">
