--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,21 @@
 ---
-const logo = "/frontpic.jpg"
+const logo = "/frontpic.png"
 ---
 <style>
-body{background-color: black;}
+body{margin:0;
+  background-color: black;}
 img{
-  width:99vw;
-  height:99vh;
+  top:0px;
+  width:100%;
+  height:98vh;
+  opacity:.7;
   /*margin: 7rem 0 1rem 37%;*/
 }
 a{text-decoration: none;}
 #text{
 position:relative;
 top: -2rem;
+left: 2rem;
 font-size:0.5rem;
 color:aliceblue}
 </style>
