fixing relative path for js file

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -64,7 +64,7 @@ noclass.classList.toggle("no");}
 const frame = document.querySelector("[data-code]");
 let src = frame.dataset.code;
 const script = document.createElement("script");
-script.src = 'src/scripts/' + src;
+script.src = '../scripts/' + src;
 const main = document.querySelector('main');
 main.appendChild(script);
 </script>
